<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.gbautin.blablance.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_activity_modal"
            app:destination="@id/activity_modal_fragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_journal"
        android:name="dev.gbautin.blablance.ui.journal.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.gbautin.blablance.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/activity_modal_fragment"
        android:name="dev.gbautin.blablance.ui.activitymodal.ActivityModalFragment"
        android:label=""
        tools:layout="@layout/fragment_activity_modal">

        <argument
            android:name="isPositive"
            app:argType="boolean" />

    </fragment>
</navigation>